# High-Speed-Finance-RAG

./: .dockerignore  .gitignore  High-Speed-Finance-RAG.pptx  Presentation.html  Presentation.pptx  README.md  Report.md  backend.Dockerfile  backend_api.py  docker-compose.yml  eval_generation.py  eval_retrieval.py  frontend.Dockerfile  generation_evaluation.py  golden_dataset.json  ingestion.py  main.py  pyproject.toml  retrieval_engine.py
artifacts/: generation_eval_aditya25_full_rerun.json  generation_eval_aditya25_smoke.json  generation_eval_pratheek25_full.json  generation_eval_smoke.json  retrieval_eval.json  retrieval_eval_45.json
data/: golden_dataset.jsonl  golden_dataset_aditya_25.jsonl  golden_dataset_pratheek_25.jsonl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
