[project]
name = "high-speed-finance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.96",
    "langchain-aws>=1.4.5",
    "langchain-core>=1.3.2",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
]
