[project]
name = "high-speed-finance-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.96",
    "fastapi>=0.116.1",
    "langchain-aws>=1.4.5",
    "langchain-core>=1.3.2",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.35.0",
    "python-pptx>=1.0.2",
]
